fix: left align about page

--- a/html/njb.scss
+++ b/html/njb.scss
@@ -9,7 +9,7 @@ p {
 }
 
 div.quarto-about-jolla p {
-  text-align: justify;
+  text-align: left;
 }
 
 .teaching {
